fixed z-index of popover and made a container for articles

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -65,6 +65,7 @@
 }
 
 .filters .popover {
+    z-index: 1;
     background-color: #FAFAFA;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
